# hog_haar_person_detection

./: CMakeLists.txt  README.md  package.xml
launch/: hog_haar_person_detection.launch
msg/: Face.msg  Faces.msg
src/: hog_haar_person_detection.cpp
